# burrocracia

./: Dockerfile  Makefile  README.md  index.py  main.py  pyproject.toml  requirements.txt
templates/: config.html  error.html  index.html  result.html
